#pragma once

class I2cDriver
{
public:
    I2cDriver();
    ~I2cDriver() = default;
};
