#pragma once

#include "Lcd2004Driver.hpp"

class EspLcd2004Driver : public Lcd2004Driver
{
public:
    EspLcd2004Driver();
    ~EspLcd2004Driver() = default;
};
