#pragma once

class Lcd2004Driver
{
public:
    Lcd2004Driver();
    ~Lcd2004Driver() = default;
};
