#pragma once

class Ws28xxDriver
{
public:
    Ws28xxDriver();
    ~Ws28xxDriver() = default;
};
