@startuml

title 4 DEVICE DRIVERS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class DriverFactory {
    - CreateWs28xxDrivers()
    - CreateMcp23017Driver()
    - CreateI2cDrivers()
    - CreateTm1637Driver()
    - CreateLcd2004Driver()
}

interface IDriver <<I2cTask>> #yellow
{
    + <abstract> Initialize() 
    + <abstract> GetModel() : IDomainModel
    + <abstract> SyncWithHardware()
}

package "Ws28xx Driver"
{
    abstract class Ws28xxDriver <<LedStripTask>> #lightblue
    {
        - pixelBufferForRmt : uint8_t[]
        + Initialize(uint8_t dataPin)
        + GetWs28xxModel : Ws28xxModel
        + SyncWithHardware()
    }

    Ws28xxDriver -u-|> IDriver

    class EspWs28xxDriver <<LedStripTask>> #lightblue

    class WindowsWs28xxDriver <<LedStripTask>> #lightblue
    {
        -Timer60fps()
    }

    Ws28xxDriver <|-- EspWs28xxDriver
    Ws28xxDriver <|-- WindowsWs28xxDriver
    DriverFactory ......> Ws28xxDriver : CreateWs28xxDriver() 
}

package "I2C Driver"
{
    abstract class I2cDriver <<I2cTask>> #yellow
    {
        + Initialize(uint8_t clkPin, uint8_t sdaPin, uint8_t slaPin)
        + <abstract> Read(...) 
        + <abstract> Write(...)
    }

    class EspI2cDriver <<I2cTask>> #yellow
    {
        + Read()
        + Write()
    }

    class WindowsI2cDriver  <<I2cTask>> #yellow
    {
        - TimerXxxFps()
        + Read()
        + Write()
    }

    I2cDriver <|-- EspI2cDriver
    I2cDriver <|-- WindowsI2cDriver 
    DriverFactory ..> I2cDriver : CreateI2cDriver()
}

package "MCP23017 Driver"
{
    abstract class Mcp23017Driver <<I2cTask>> #yellow
    {
        + <abstract> Initialize()
        + GetMcp23017Model() : Mcp23017Model
        + SyncWithHardware()
    }

    Mcp23017Driver -u-|> IDriver

    class EspMcp23017Driver <<I2cTask>> #yellow
    {
        - uint8_t i2cAddress
        + Initialize(uint8_t i2cAddress)
    }

    class WindowsMcp23017Driver <<I2cTask>> #yellow
    {
        - TimerXxxFps()
    }

    Mcp23017Driver <|-- EspMcp23017Driver
    Mcp23017Driver <|-- WindowsMcp23017Driver
    Mcp23017Driver *--- I2cDriver
    DriverFactory ..> Mcp23017Driver : CreateMcp23017Driver()
}

package "2004 LCD Driver"
{
    abstract class Lcd2004Driver <<I2cTask>> #yellow
    {
        + Initialize(uint8_t i2cAddress)
        + GetLcd2004Model : Lcd2004Model
        + SyncWithHardware()
    }

    Lcd2004Driver -u-|> IDriver

    class EspLcd2004Driver  <<I2cTask>> #yellow
    {
        - uint8_t i2cAddress
        + Initialize(uint8_t i2cAddress)
    }

    class WindowsLcd2004Driver  <<I2cTask>> #yellow
    {
    }

    Lcd2004Driver <|-- EspLcd2004Driver
    Lcd2004Driver <|-- WindowsLcd2004Driver
    Lcd2004Driver  *--- I2cDriver
    DriverFactory ..> Lcd2004Driver : CreateTm1637Driver() 
}

package "TM1637 Driver"
{
    abstract class Tm1637Driver <<I2cTask>> #yellow
    {
        + Initialize(uint8_t clkPin, uint8_t dataPin)
        + GetTm1637Model : Tm1637Model
        + SyncWithHardware()
    }

    Tm1637Driver -u-|> IDriver

    class EspTm1637Driver  <<I2cTask>> #yellow
    {
    }

    class WindowsTm1637Driver  <<I2cTask>> #yellow
    {
    }

    Tm1637Driver <|-- EspTm1637Driver
    Tm1637Driver <|-- WindowsTm1637Driver
    DriverFactory ....> Tm1637Driver : CreateTm1637Driver() 
}

@enduml
